# textcraft

./: .dockerignore  .env  .env.example  .env.template  .gitignore  Dockerfile  README.md  api.py  config.json  config.json.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup  setup.py  start.bat  start.sh
api/: api.py
bench/: LangChainDemo2.py  LangChainDemo3.py
docs/: 1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  back.txt  sunyard.txt  zelda.txt  关于Amiibo.txt  关于异能.txt  探索的技巧.txt  无伤打人马方法.txt  武器种类及运用.txt  烹饪的技巧.txt  马匹复活方法.txt
file/: chat.txt
scripts/: check_requirements.py
src/api/: api.py
src/model/spark/: SparkChat.py  myconfig.py  sparkembedding.py  sparktest.py  sydtest.py
src/pinecone/: pinecone_openai.py  pinecone_store.py
src/pinecone_store/: pinecone_qa.py  pinecone_store.py
src/pinecone_store/notion/: notion_qa.py  notion_store.py
src/summarize/: openai_summarize.py  spark_summarize.py
summarize/: OpenAISummarize.py  openai_summarize.py  spark_summarize.py  summarize.py
summarize/spark/: SparkChat.py  SydBCChat.py  fugetest.py  sydlctest.py  test.py
test/: baichuan_demo.py  langchain_prompt.py
tests/: langchain_agent.py  langchain_duckduckgo.py  langchain_model.py  langchain_prompt.py
textcraft/: __main__.py  config.py
textcraft/agent/: agent_power.py
textcraft/agents/: agent_power.py  rag_agent.py
textcraft/api/: complex.py  config.py  fast_api.py  functions.py  gradio_web.py  langserve_api.py  langserves.py  main.py  test.py
textcraft/api/function/: chat.py  complex.py  es.py  extraction.py  generalize.py  summarize.py
textcraft/api/schema/: chats.py
textcraft/chains/: MExtraction.py  conversation.py  eschain.py  extraction_chain.py  extraction_chain_Kor.py  generalize.py  joketeller.py
textcraft/core/: config.py  inventory.py  settings.py  user_config.py
textcraft/function/complex/: ExtractionTest.py  MExtraction.py
textcraft/function/rag/: es_demo.py
textcraft/function/summarize/: summarizer.py
textcraft/model/baichuan/: baichuan_chat.py
textcraft/model/ernie/: ernie_chat.py
textcraft/model/qwen/: qwen_chat.py  qwen_embedding.py
textcraft/model/spark/: spark_chat.py
textcraft/models/embeddings/: embedding_creator.py  openai.py  qwen.py
textcraft/models/ernie/: ernie_chat.py
textcraft/models/llms/: baichuan.py  ernie.py  llm_creator.py  openai.py  qwen.py  spark.py
textcraft/models/qwen/: qwen_chat.py  qwen_embedding.py
textcraft/models/spark/: spark_chat.py
textcraft/pinecone_store/: pinecone_qa.py  pinecone_store.py
textcraft/pinecone_store/notion/: notion_qa.py  notion_store.py
textcraft/prompts/: complex.py  generalize.py  summarize.py
textcraft/summarize/: openai_summarize.py  spark_summarize.py  summarize.py
textcraft/tools/: classify_tool.py  label_tool.py  qa_tool.py  similarity_search_tool.py  title_tool.py  vector_store_tool.py
textcraft/ui/: gradio.py  gradio_web.py  inventory.py  streamlit.py  streamlit_web.py
textcraft/ui/streamlit_ui/: Chatbot.py  utils.py
textcraft/ui/streamlit_ui/pages/: 1_File_Q&A.py  (+3 more)
textcraft/utils/: complex.py  convert_util.py  mongo_manager.py  redis_manager.py
textcraft/vectors/: pinecone_qa.py  pinecone_store.py
textcraft/vectors/es/: ElasticsearchConnection.py  connection.py  es_memory.py  es_online_chat.py  es_search.py  es_store.py
textcraft/vectors/notion/: notion_qa.py
